# decaf-bytecode

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: arithmetic.decaf  factorial.decaf  if_else.decaf  sum_loop.decaf  variables.decaf
src/decaf/: __init__.py  ast.py  chunk.py  cli.py  compiler.py  disasm.py  errors.py  lexer.py  opcodes.py  parser.py  semantic.py  token.py  vm.py
tests/: __init__.py  test_compiler.py  test_parser.py  test_semantic.py  test_vm.py
